--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
         <div class="container footer-container">
             <div class="conect">
                 <a href="./index.html" class="logo-down">Web<span class="down-white">Studio</span></a>
+                <!-- <a href="./index.html" class="logo down-white"><span class="logo-down">Web</span><span class="down-white">Studio</span></a> -->
+                <!-- <a href="./index.html" class="logo"><span class="logo-down">Web</span>Studio</a> -->
                 <address class="footer-address">
                     <ul class="bottom list">
                         <li class="bottom-box"><a href="г.Киев,пр-тЛесиУкраинки,26" class="town">г. Киев, пр-т Леси
